added links for paypal and spotify

--- a/links/index.html
+++ b/links/index.html
@@ -39,7 +39,7 @@
             <a class="link" href="https://de.linkedin.com/in/dominik-h%C3%B6hr"><i class="fab fa-linkedin fa-2x"></i><label>LinkedIn</label><div></div></a>
             <a class="link" href="https://github.com/hrdominik"><i class="fab fa-github fa-2x"></i><label>GitHub</label><div></div></a>
             <br />
-            <a class="link" href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;%64%6F%6D%69%6E%69%6B%40%68%6F%65%68%72%2E%6E%65%74"><i class="fa fa-envelope fa-2x"></i><label>E-Mail</label><div></div></a>
+            <a class="link" href="javascript:linkTo_UnCryptMailto('nbjmup;epnjojlAipfis/ofu');"><i class="fa fa-envelope fa-2x"></i><label>E-Mail</label><div></div></a>
             <a class="link" href="tel:+491785247697"><div><i class="fa fa-phone-alt fa-2x"></i>   <i class="fab fa-whatsapp fa-2x"></i>  <i class="fab fa-telegram fa-2x"></i></div><label style="margin-left: -91px !important;">Telefonnummer</label><div></div></a>
             <br />
             <a class="link" href="../DHR.vcf" download title="Vcard Download only for Android and Windows"><i class="fa fa-address-book fa-2x"></i><label>Kontakt</label><div></div></a>
@@ -56,7 +56,10 @@
             <a class="link" href="https://www.snapchat.com/add/hrdominik"><i class="fab fa-snapchat fa-2x"></i><label>Snapchat</label><div></div></a>
             <br />
             <a class="link" id="discord"><i class="fab fa-discord fa-2x"></i><label></label><div></div></a>
+            <a class="link" href="https://open.spotify.com/user/d16fj2jdgywc7wyf089p7jkea?si=ebce638b3d93416a"><i class="fab fa-spotify fa-2x"></i><label>Spotify</label><div></div></a>
             <a class="link" href="https://www.steamcommunity.com/id/thecrackd"><i class="fab fa-steam fa-2x"></i><label>Steam</label><div></div></a>
+            <br />
+            <a class="link" href="https://www.paypal.me/dhoehr"><i class="fab fa-paypal fa-2x"></i><label>PayPal</label><div></div></a>
         </div>
     </div>
 
