fix icons of my-work

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                 </div>
                 <div class="isotope-item" data-type="other">
                   <div class="service-item">
-                    <div class="second-service-icon service-icon"></div>
+                    <div class="third-service-icon service-icon"></div>
                     <h4>Teilnahme</h4>
                     <p>
                       <a href="https://www.pyddf.de" id="service-place">PYTHON SPRINT, DÜSSELDORF (PyDDF)</a>
@@ -322,7 +322,7 @@
                 </div>
                 <div class="isotope-item" data-type="other">
                   <div class="service-item">
-                    <div class="second-service-icon service-icon"></div>
+                    <div class="third-service-icon service-icon"></div>
                     <h4>Tonmeister Assistent</h4>
                     <p>2012 bis 2018</p>
                     <p>
