--- a/index.html
+++ b/index.html
@@ -252,9 +252,9 @@
                     <h4>Gewähltes Mitglied <br /><small>in verschiedenen Kommissionen und Ausschüssen</small></h4>
                     <p>Seit Oktober 2021</p>
                     <p>
-                      <a href="https://stupa.upb.de" id="service-place">STUDIERENDENPARLAMENT</a>
+                      <a href="https://stupa.upb.de" id="service-place">STUDIERENDENPARLAMENT <i class="fas fa-link"></i></a>
                     </p>
-                    Stellvertretender Vorsitz im Haushaltsausschuss <br />Beratendesmitglied im Prüfungsausschuss
+                    <i>Stellvertretender Vorsitz im Haushaltsausschuss <br />Beratendesmitglied im Prüfungsausschuss</i>
                   </div>
                 </div>
                 <div class="isotope-item" data-type="volunteering">
@@ -263,7 +263,7 @@
                     <h4>Aktives Mitglied</h4>
                     <p>Seit Oktober 2019</p>
                     <p>
-                      <a href="https://www.fsrwinfo.de" id="service-place">FACHSCHAFTSRAT WIRTSCHAFTSINFORMATIK</a>
+                      <a href="https://www.fsrwinfo.de" id="service-place">FACHSCHAFTSRAT WIRTSCHAFTSINFORMATIK <i class="fas fa-link"></i></a>
                     </p>
                   </div>
                 </div>
@@ -273,9 +273,9 @@
                     <h4>Werkstudent</h4>
                     <p>Seit August 2020</p>
                     <p>
-                      <a href="https://www.beckmann-partner.de" id="service-place">BECKMANN & PARTNER CONSULT</a> 
+                      <a href="https://www.beckmann-partner.de" id="service-place">BECKMANN & PARTNER CONSULT <i class="fas fa-link"></i></a> 
                     </p>
-                    Konzeptionierung und Realisierung verschiedener interner Projekte
+                  <i>Konzeptionierung und Realisierung verschiedener interner Projekte</i>
                   </div>
                 </div>
                 <div class="isotope-item" data-type="career">
@@ -286,7 +286,7 @@
                     <p>
                       COMBI VERBRAUCHERMARKT 
                     </p>
-                    Verkäufer auf der Ladenfläche
+                  <i>Verkäufer auf der Ladenfläche</i>
                   </div>
                 </div>
                 <div class="isotope-item" data-type="education">
@@ -295,9 +295,9 @@
                     <h4>Studium</h4>
                     <p>Seit 2018</p>
                     <p>
-                      <a href="https://www.uni-paderborn.de" id="service-place">UNIVERISITÄT PADERBORN</a> 
+                      <a href="https://www.uni-paderborn.de" id="service-place">UNIVERISITÄT PADERBORN <i class="fas fa-link"></i></a> 
                     </p>
-                    Wirtschaftsinformatik, Bachelor of Science 
+                  <i>Wirtschaftsinformatik, Bachelor of Science </i>
                   </div>
                 </div>
                 <div class="isotope-item" data-type="education">
@@ -315,9 +315,9 @@
                     <div class="third-service-icon service-icon"></div>
                     <h4>Teilnahme</h4>
                     <p>
-                      <a href="https://www.pyddf.de" id="service-place">PYTHON SPRINT, DÜSSELDORF (PyDDF)</a>
+                      <a href="https://www.pyddf.de" id="service-place">PYTHON SPRINT, DÜSSELDORF (PyDDF) <i class="fas fa-link"></i></a>
                     </p>
-                    und weitere Meetings
+                  <i>und weitere Meetings</i>
                   </div>
                 </div>
                 <div class="isotope-item" data-type="other">
@@ -328,7 +328,7 @@
                     <p>
                       GYMNASIUM SCHLOß HOLTE - STUKENBROCK
                     </p>
-                    Betreuung der Ton- und Lichttechnik bei diversen Schulveranstaltungen 
+                  <i>Betreuung der Ton- und Lichttechnik bei diversen Schulveranstaltungen</i>
                   </div>
                 </div>
               </div>
