--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
           </div>
           <div class="row">
             <div class="isotope-wrapper">
-              <form class="isotope-toolbar">
+              <!-- <form class="isotope-toolbar">
                 <label><input
                     type="radio"
                     data-type="*"
@@ -244,13 +244,12 @@
                     name="isotope-filter"
                   />
                   <span>Sonstige</span></label>
-              </form>
+              </form> -->
               <div class="isotope-box">
                 <div class="isotope-item" data-type="volunteering">
                   <div class="service-item">
-                    <div class="third-service-icon service-icon"></div>
+                    <div class="service-icon"><i class="fa fa-cogs fa-3x"></i><div class="service-date">Seit Oktober 2021</div></div>
                     <h4>Gewähltes Mitglied <br /><small>in verschiedenen Kommissionen und Ausschüssen</small></h4>
-                    <p>Seit Oktober 2021</p>
                     <p>
                       <a href="https://stupa.upb.de" id="service-place">STUDIERENDENPARLAMENT <i class="fas fa-link"></i></a>
                     </p>
@@ -259,9 +258,8 @@
                 </div>
                 <div class="isotope-item" data-type="volunteering">
                   <div class="service-item">
-                    <div class="third-service-icon service-icon"></div>
+                    <div class="service-icon"><i class="fa fa-cogs fa-3x"></i><div class="service-date">Seit Oktober 2019</div></div>
                     <h4>Aktives Mitglied</h4>
-                    <p>Seit Oktober 2019</p>
                     <p>
                       <a href="https://www.fsrwinfo.de" id="service-place">FACHSCHAFTSRAT WIRTSCHAFTSINFORMATIK <i class="fas fa-link"></i></a>
                     </p>
@@ -269,50 +267,37 @@
                 </div>
                 <div class="isotope-item" data-type="career">
                   <div class="service-item">
-                    <div class="fourth-service-icon service-icon" ></div>
+                    <div class="service-icon" ><i class="fas fa-briefcase fa-3x"></i><div class="service-date">Seit August 2020</div></div>
                     <h4>Werkstudent</h4>
-                    <p>Seit August 2020</p>
                     <p>
                       <a href="https://www.beckmann-partner.de" id="service-place">BECKMANN & PARTNER CONSULT <i class="fas fa-link"></i></a> 
                     </p>
                   <i>Konzeptionierung und Realisierung verschiedener interner Projekte</i>
                   </div>
                 </div>
-                <div class="isotope-item" data-type="career">
-                  <div class="service-item">
-                    <div class="fourth-service-icon service-icon"></div>
-                    <h4>Aushilfe</h4>
-                    <p>April 2018 bis April 2019</p>
-                    <p>
-                      COMBI VERBRAUCHERMARKT 
-                    </p>
-                  <i>Verkäufer auf der Ladenfläche</i>
-                  </div>
-                </div>
                 <div class="isotope-item" data-type="education">
                   <div class="service-item">
-                    <div class="second-service-icon service-icon"></div>
+                    <div class="service-icon"><i class="fas fa-graduation-cap fa-3x"></i><div class="service-date">Seit Oktober 2018</div></div>
                     <h4>Studium</h4>
-                    <p>Seit 2018</p>
                     <p>
                       <a href="https://www.uni-paderborn.de" id="service-place">UNIVERISITÄT PADERBORN <i class="fas fa-link"></i></a> 
                     </p>
                   <i>Wirtschaftsinformatik, Bachelor of Science </i>
                   </div>
                 </div>
-                <div class="isotope-item" data-type="education">
+                <div class="isotope-item" data-type="career">
                   <div class="service-item">
-                    <div class="second-service-icon service-icon"></div>
-                    <h4>Allgemeine Hochschulreife</h4>
-                    <p>2018</p>
+                    <div class="service-icon"><i class="fas fa-briefcase fa-3x"></i><div class="service-date">April 2018 bis April 2019</div></div>
+                    <h4>Aushilfe</h4>
                     <p>
-                      GYMNASIUM SCHLOß HOLTE - STUKENBROCK
+                      COMBI VERBRAUCHERMARKT 
                     </p>
+                  <i>Verkäufer auf der Ladenfläche</i>
                   </div>
                 </div>
                 <div class="isotope-item" data-type="other">
                   <div class="service-item">
-                    <div class="third-service-icon service-icon"></div>
+                    <div class="service-icon"><i class="fa fa-cogs fa-3x"></i></div>
                     <h4>Teilnahme</h4>
                     <p>
                       <a href="https://www.pyddf.de" id="service-place">PYTHON SPRINT, DÜSSELDORF (PyDDF) <i class="fas fa-link"></i></a>
@@ -322,13 +307,21 @@
                 </div>
                 <div class="isotope-item" data-type="other">
                   <div class="service-item">
-                    <div class="third-service-icon service-icon"></div>
+                    <div class="service-icon"><i class="fa fa-cogs fa-3x"></i><div class="service-date">2012 bis 2018</div></div>
                     <h4>Tonmeister Assistent</h4>
-                    <p>2012 bis 2018</p>
                     <p>
                       GYMNASIUM SCHLOß HOLTE - STUKENBROCK
                     </p>
                   <i>Betreuung der Ton- und Lichttechnik bei diversen Schulveranstaltungen</i>
+                  </div>
+                </div>
+                <div class="isotope-item" data-type="education">
+                  <div class="service-item">
+                    <div class="service-icon"><i class="fas fa-graduation-cap fa-3x"></i><div class="service-date">2010 bis 2018</div></div>
+                    <h4>Allgemeine Hochschulreife</h4>
+                    <p>
+                      GYMNASIUM SCHLOß HOLTE - STUKENBROCK
+                    </p>
                   </div>
                 </div>
               </div>
