finish about-me

--- a/index.html
+++ b/index.html
@@ -59,35 +59,34 @@
           </div>
         </div>
 
-        <div id="content" class="content col-sm-8"
+        <div class="content col">
 
-          <section class="section about-me" data-section="about-me" id="about-me">
+          <section class="about-me" data-section="about-me" id="about-me">
             <div class="container">
-              <div class="section-heading">
-                <h2>Über mich</h2>
-                <div class="line-dec"></div>
-                <span>
-                  Ich bin Dominik Höhr, <span id="yearOutput"></span> Jahre alt, Student der Wirtschaftsinformatik an der Universität Paderborn.
-                </span>
+              <div class="row mt-5">
+                <div class="col section-heading">
+                  <h2>Über mich</h2>
+                  <div class="line-dec"></div>
+                  <p>Ich bin Dominik Höhr, <span id="yearOutput"></span> Jahre alt, Student der Wirtschaftsinformatik an der Universität Paderborn.</p>
+                </div>
               </div>
-              <div class="left-image-post">
-                <div class="row">
-                  <div class="col-md-6">
-                    <div class="left-image">
-                      <img src="./DHR_FSR.png" alt="" />
+              <div class="row">
+                <div class="col-md-6">
+                  <img src="./DHR_FSR.png" alt="" />
+                </div>
+                <div class="col-md-6 d-flex align-content-between flex-wrap">
+                  <div class="row">
+                    <div class="col">
+                      <p>Interessiert bin ich an der Programmierung und die damit zusammenhängenden Prozesse in den Unternehmen und der Wirtschaft. <br /> <br />
+                      Aktuell studiere ich im 6.Semester und arbeite als Werkstudent in der Consulting-Branche.</p>
                     </div>
                   </div>
-                  <div class="col-md-6">
-                    <div class="right-text">
-                      <p>
-                        Interessiert bin ich an der Programmierung und die damit zusammenhängenden Prozesse in den Unternehmen und der Wirtschaft. <br /> <br />
-                        Aktuell studiere ich im 6.Semester und arbeite als Werkstudent in der Consulting-Branche.
-                      </p>
-                      <br />
+                  <div class="row">
+                    <div class="col">
                       <hr style="background-color: white;" />
                       <p>Schauen Sie gerne auch auf meinen anderen Online-Profilen vorbei und verschaffen Sie sich einen detaillierten Überblick über mich, meinen bisherigen Werdegang und meine Leistungen.</p>
                       <div class="moreContact">
-                        <div class="link-button">
+                        <div class="link-button mt-3">
                           <a href="https://de.linkedin.com/in/dominik-h%C3%B6hr"><i class="fab fa-linkedin"></i> LinkedIn</a>
                         </div> 
                         &nbsp;&nbsp;&nbsp;
