recode blog and linktree with bootstrap

--- a/links/index.html
+++ b/links/index.html
@@ -2,6 +2,9 @@
 
 <html>
 <head>
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="../favicon.ico" />
     <link rel="apple-touch-icon" href="../favicon.png" />
@@ -14,24 +17,26 @@
     <link rel="stylesheet" href="../assets/css/brands.min.css" />
     <link rel="stylesheet" href="../assets/css/regular.min.css" />
     <link rel="stylesheet" href="../assets/css/solid.min.css" />
+
     <link rel="stylesheet" href="../assets/css/style.css" />
     <link rel="stylesheet" href="../assets/css/linktree.css">
 </head>
 
 <body>
-    <div id="page-wraper">
-        <img id="userPhoto" src="../DHR_squared.png" alt="User Photo">
-        <div class="authorContent">
-            <h4>Dominik Höhr</h4>
+    <div class="page-wraper container">
+        <div class="row justify-content-center align-self-center image-round">
+            <img id="userPhoto" src="../DHR_squared.png" alt="User Photo">
+        </div>
+        <div class="row justify-content-center align-self-center mt-3">
+            <h4>Dominik Höhr</h4><div class="w-100"></div>
             <span>Student</span>
         </div>
-
-        <br /> <br />
-        <div id="home-center">
-        <div class="white-button"><a id="home" href="https://dominik.hoehr.net"> &laquo; Zurück zur Webseite</a></div>
+        <div class="row justify-content-center align-self-center mt-3">
+            <div class="link-button"><a id="home" href="https://dominik.hoehr.net"> &laquo; Zurück zur Webseite</a></div>
         </div>
+        <br />
 
-        <div class="section-heading">
+        <div class="heading">
             <h2>Geschäftlich</h2>
             <div class="line-dec"></div>
         </div>
@@ -45,7 +50,7 @@
             <a class="link" href="../DHR.vcf" download title="Vcard Download only for Android and Windows"><i class="fa fa-address-book fa-2x"></i><label>Kontakt</label><div></div></a>
         </div>
         
-        <div class="section-heading">
+        <div class="heading">
             <h2>Privat</h2>
             <div class="line-dec"></div>
         </div>
