--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <body>
     <div class="page-wrapper container">
       <div class="row justify-content-center align-self-center">
-        <div class="menu col-sm-3">
+        <div class="menu col-sm-3"><!-- ToDo: Responsive-->
           <div class="menu-content">
             <div class="row justify-content-center align-self-center image-round">
               <a href=""><img src="./DHR_squared.png" alt="" /></a>
@@ -61,10 +61,10 @@
 
         <div class="content col">
 
-          <section class="about-me" data-section="about-me" id="about-me">
+          <section class="section about-me mt-5" data-section="about-me" id="about-me">
             <div class="container">
-              <div class="row mt-5">
-                <div class="col section-heading">
+              <div class="row">
+                <div class="col heading">
                   <h2>Über mich</h2>
                   <div class="line-dec"></div>
                   <p>Ich bin Dominik Höhr, <span id="yearOutput"></span> Jahre alt, Student der Wirtschaftsinformatik an der Universität Paderborn.</p>
@@ -101,74 +101,74 @@
             </div>
           </section>
 
-          <section class="section my-services" data-section="skills" id="skills">
+          <section class="section skills mt-5" data-section="skills" id="skills"> <!-- ToDo: Responsive-->
             <div class="container">
-              <div class="section-heading">
-                <h2>Fertigkeiten & Fähigkeiten</h2>
-                <div class="line-dec"></div>
-                <span>
-                  Ich bin zur Zeit als Fullstack Webentwickler unterwegs. <br /> Dies kann, muss jedoch nicht immer so bleiben.
-                </span>
+              <div class="row">
+                <div class="col heading">
+                  <h2>Fertigkeiten & Fähigkeiten</h2>
+                  <div class="line-dec"></div>
+                  <p>Ich bin zur Zeit als Fullstack Webentwickler unterwegs. <br /> Dies kann, muss jedoch nicht immer so bleiben.</p>
+                </div>
               </div>
-              <div class="row"><!--FixMe: Style-->
-                <div class="col-md-6">
-                  <figure class="snip1321 servicContent">
-                    <div class="service">
+              <div class="row">
+                <div class="col">
+                  <figure class="skill">
+                    <div class="heading">
                       <h4>Softwareentwicklung</h4>
                       <div class="line-dec"></div>
                     </div>
                     <figcaption>
                       <h5>Frontend</h5>
-                      <div class="skills">
+                      <div class="skill-list">
                         <span title="HTML5"><i class="fab fa-html5"></i></span>
                         <span title="CSS3"><i class="fab fa-css3"></i></span>
                         <span title="ReactJS"><i class="fab fa-react"></i></span>
                         <span title="JavaScript"><i class="fab fa-js"></i></span>
                       </div>
                       <h5>Backend</h5>
-                      <div class="skills">
+                      <div class="skill-list">
                         <span title="Python"><i class="fab fa-python"></i></span>
                         <span title="JakartaEE"><i class="fab fa-java"></i></span>
                         <span title="SQL"><i class="fas fa-database"></i></span>
                       </div>
                       <h5>Entwicklungs- und Buildprozess</h5>
-                      <div class="skills">
+                      <div class="skill-list">
                         <span title="git"><i class="fab fa-git"></i></span>
                         <span title="yarn"><i class="fab fa-yarn"></i></span>
                         <span title="Nginx"><i class="fas fa-server"></i></span>
                       </div>
                       <h5>Weitere</h5>
-                      <div class="skills">
+                      <div class="skill-list">
                         <span title="Microsoft Office 365"><i class="fab fa-microsoft"></i></span>
-                      </div><span>Insbesondere Sharepoint und Teams</span>
+                      </div><small>Insbesondere Sharepoint und Teams</small>
                     </figcaption>
                   </figure>
                 </div>
-                <div class="col-md-6">
-                  <figure class="snip1321 servicContent">
-                    <div class="service" >
+                <div class="col">
+                  <figure class="skill">
+                    <div class="heading" >
                       <h4>Fachliche Beratung</h4>
                       <div class="line-dec"></div>
                     </div>
                     <figcaption>
                       <h5>Projektmanagement</h5>
-                      <div class="skills">
+                      <div class="skill-list">
                         <span title="SCRUM"><i class="fas fa-tasks"></i></span>
                         <span title="Projektmanagement"><i class="fas fa-project-diagram"></i></span>
                       </div>
                       <h5>Modellierung</h5>
-                      <div class="skills">
+                      <div class="skill-list">
                         <span title="Business Process Model and Notation 2.0"><i class="fab" style="font-size: small;">BPMN</i></span>
                         <span title="Erweiterte Ereignisgesteuerte Prozesskette"><i class="fab" style="font-size: small;">eEPK</i></span>
                         <span title="Datenbank Normalisierung"><i class="fas fa-database"></i></span>
                       </div>
                       <h5>Tools</h5>
-                      <div class="skills">
+                      <div class="skill-list">
                         <span title="SAP"><i class="fab">SAP</i></span>
                         <span title="Data Science, CRISP-DM"><i class="fab fa-r-project"></i></span>
                       </div>
                       <h5>Weitere</h5>
-                      <div class="skills">
+                      <div class="skill-list">
                         <span title="Social Media Understanding"><i class="fas fa-hashtag"></i></span>
                       </div>
                     </figcaption>
@@ -178,134 +178,63 @@
             </div>
           </section>
 
-          <section class="section my-work" data-section="cv" id="cv">
+          <section class="section cv" data-section="cv" id="cv">
             <div class="container">
-              <div class="section-heading">
-                <h2>Erfahrung</h2>
-                <div class="line-dec"></div>
-                <span>
-                  Aktuell Student und Werkstudent
-                </span>
-                <br /> <br />
-                <p>
-                  Ich suche ständig die Gelegenheit die erlernten Inhalte meines Studiums anzuwenden und zu erweitern und Erfahrungen in der Praxis zu sammeln.
-                </p>
-              </div>
               <div class="row">
-                <div class="isotope-wrapper">
-                  <!-- <form class="isotope-toolbar">
-                    <label><input
-                        type="radio"
-                        data-type="*"
-                        checked=""
-                        name="isotope-filter"
-                      />
-                      <span>Alle</span></label>
-                    <label><input
-                      type="radio"
-                      data-type="volunteering"
-                      name="isotope-filter"
-                    />
-                    <span>Ehrenamt</span></label>
-                    <label><input
-                        type="radio"
-                        data-type="career"
-                        name="isotope-filter"
-                      />
-                      <span>Karriere</span></label>
-                    <label><input
-                        type="radio"
-                        data-type="education"
-                        name="isotope-filter"
-                      />
-                      <span>Ausbildung</span></label>
-                      <label><input
-                        type="radio"
-                        data-type="other"
-                        name="isotope-filter"
-                      />
-                      <span>Sonstige</span></label>
-                  </form> -->
-                  <div class="isotope-box"><!--FixMe: Style-->
-                    <div class="isotope-item" data-type="volunteering">
-                      <div class="service-item">
-                        <div class="service-icon"><i class="fa fa-cogs fa-3x"></i><div class="service-date">Seit Oktober 2021</div></div>
-                        <h4>Gewähltes Mitglied <br /><small>in verschiedenen Kommissionen und Ausschüssen</small></h4>
-                        <p>
-                          <a href="https://stupa.upb.de" id="service-place">STUDIERENDENPARLAMENT <i class="fas fa-link"></i></a>
-                        </p>
-                        <i>Stellvertretender Vorsitz im Haushaltsausschuss <br />Beratendesmitglied im Prüfungsausschuss</i>
-                      </div>
-                    </div>
-                    <div class="isotope-item" data-type="volunteering">
-                      <div class="service-item">
-                        <div class="service-icon"><i class="fa fa-cogs fa-3x"></i><div class="service-date">Seit Oktober 2019</div></div>
-                        <h4>Aktives Mitglied</h4>
-                        <p>
-                          <a href="https://www.fsrwinfo.de" id="service-place">FACHSCHAFTSRAT WIRTSCHAFTSINFORMATIK <i class="fas fa-link"></i></a>
-                        </p>
-                      </div>
-                    </div>
-                    <div class="isotope-item" data-type="career">
-                      <div class="service-item">
-                        <div class="service-icon" ><i class="fas fa-briefcase fa-3x"></i><div class="service-date">Seit August 2020</div></div>
-                        <h4>Werkstudent</h4>
-                        <p>
-                          <a href="https://www.beckmann-partner.de" id="service-place">BECKMANN & PARTNER CONSULT <i class="fas fa-link"></i></a> 
-                        </p>
-                      <i>Konzeptionierung und Realisierung verschiedener interner Projekte</i>
-                      </div>
-                    </div>
-                    <div class="isotope-item" data-type="education">
-                      <div class="service-item">
-                        <div class="service-icon"><i class="fas fa-graduation-cap fa-3x"></i><div class="service-date">Seit Oktober 2018</div></div>
-                        <h4>Studium</h4>
-                        <p>
-                          <a href="https://www.uni-paderborn.de" id="service-place">UNIVERISITÄT PADERBORN <i class="fas fa-link"></i></a> 
-                        </p>
-                      <i>Wirtschaftsinformatik, Bachelor of Science </i>
-                      </div>
-                    </div>
-                    <div class="isotope-item" data-type="career">
-                      <div class="service-item">
-                        <div class="service-icon"><i class="fas fa-briefcase fa-3x"></i><div class="service-date">April 2018 bis April 2019</div></div>
-                        <h4>Aushilfe</h4>
-                        <p>
-                          COMBI VERBRAUCHERMARKT 
-                        </p>
-                      <i>Verkäufer auf der Ladenfläche</i>
-                      </div>
-                    </div>
-                    <div class="isotope-item" data-type="other">
-                      <div class="service-item">
-                        <div class="service-icon"><i class="fa fa-cogs fa-3x"></i></div>
-                        <h4>Teilnahme</h4>
-                        <p>
-                          <a href="https://www.pyddf.de" id="service-place">PYTHON SPRINT, DÜSSELDORF (PyDDF) <i class="fas fa-link"></i></a>
-                        </p>
-                      <i>und weitere Meetings</i>
-                      </div>
-                    </div>
-                    <div class="isotope-item" data-type="other">
-                      <div class="service-item">
-                        <div class="service-icon"><i class="fa fa-cogs fa-3x"></i><div class="service-date">2012 bis 2018</div></div>
-                        <h4>Tonmeister Assistent</h4>
-                        <p>
-                          GYMNASIUM SCHLOß HOLTE - STUKENBROCK
-                        </p>
-                      <i>Betreuung der Ton- und Lichttechnik bei diversen Schulveranstaltungen</i>
-                      </div>
-                    </div>
-                    <div class="isotope-item" data-type="education">
-                      <div class="service-item">
-                        <div class="service-icon"><i class="fas fa-graduation-cap fa-3x"></i><div class="service-date">2010 bis 2018</div></div>
-                        <h4>Allgemeine Hochschulreife</h4>
-                        <p>
-                          GYMNASIUM SCHLOß HOLTE - STUKENBROCK
-                        </p>
-                      </div>
-                    </div>
-                  </div>
+                <div class="col heading">
+                  <h2>Erfahrung</h2>
+                  <div class="line-dec"></div>
+                  <span>Aktuell Student und Werkstudent</span>
+                  <br /> <br />
+                  <p>Ich suche ständig die Gelegenheit die erlernten Inhalte meines Studiums anzuwenden, zu erweitern und Erfahrungen in der Praxis zu sammeln.</p>
+                </div>
+              </div>
+              <div class="row career"><!-- ToDo: Responsive-->
+                <div class="cv-item">
+                  <div class="cv-head"><div class="service-icon"><i class="fa fa-cogs fa-3x"></i></div><div class="service-date">Seit Oktober 2021</div></div>
+                  <h4>Gewähltes Mitglied <br /><small>in verschiedenen Kommissionen und Ausschüssen</small></h4>
+                  <p><a href="https://stupa.upb.de" id="service-place">STUDIERENDENPARLAMENT <i class="fas fa-link"></i></a></p>
+                  <i>Stellvertretender Vorsitz im Haushaltsausschuss <br />Beratendesmitglied im Prüfungsausschuss</i>
+                </div>
+                <div class="cv-item">
+                  <div class="cv-head"><div class="service-icon"><i class="fa fa-cogs fa-3x"></i></div><div class="service-date">Seit Oktober 2019</div></div>
+                  <h4>Aktives Mitglied</h4>
+                  <p><a href="https://www.fsrwinfo.de" id="service-place">FACHSCHAFTSRAT WIRTSCHAFTSINFORMATIK <i class="fas fa-link"></i></a></p>
+                </div>
+                <div class="cv-item">
+                  <div class="cv-head"><div class="service-icon" ><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Seit August 2020</div></div>
+                  <h4>Werkstudent</h4>
+                  <p><a href="https://www.beckmann-partner.de" id="service-place">BECKMANN & PARTNER CONSULT <i class="fas fa-link"></i></a></p>
+                  <i>Konzeptionierung und Realisierung verschiedener interner Projekte</i>
+                </div>
+                <div class="cv-item">
+                  <div class="cv-head"><div class="service-icon"><i class="fas fa-graduation-cap fa-3x"></i></div><div class="service-date">Seit Oktober 2018</div></div>
+                  <h4>Studium</h4>
+                  <p><a href="https://www.uni-paderborn.de" id="service-place">UNIVERISITÄT PADERBORN <i class="fas fa-link"></i></a></p>
+                  <i>Wirtschaftsinformatik, Bachelor of Science </i>
+                </div>
+                <div class="cv-item">
+                  <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">April 2018 bis April 2019</div></div>
+                  <h4>Aushilfe</h4>
+                  <p>COMBI VERBRAUCHERMARKT</p>
+                  <i>Verkäufer auf der Ladenfläche</i>
+                </div>
+                <div class="cv-item">
+                  <div class="cv-head"><div class="service-icon"><i class="fa fa-cogs fa-3x"></i></div><div class="service-date"></div></div>
+                  <h4>Teilnahme</h4>
+                  <p><a href="https://www.pyddf.de" id="service-place">PYTHON SPRINT, DÜSSELDORF (PyDDF) <i class="fas fa-link"></i></a></p>
+                  <i>und weitere Meetings</i>
+                </div>
+                <div class="cv-item">
+                  <div class="cv-head"><div class="service-icon"><i class="fa fa-cogs fa-3x"></i></div><div class="service-date">2012 bis 2018</div></div>
+                  <h4>Tonmeister Assistent</h4>
+                  <p>GYMNASIUM SCHLOß HOLTE - STUKENBROCK</p>
+                  <i>Betreuung der Ton- und Lichttechnik bei diversen Schulveranstaltungen</i>
+                </div>
+                <div class="cv-item">
+                  <div class="cv-head"><div class="service-icon"><i class="fas fa-graduation-cap fa-3x"></i></div><div class="service-date">2010 bis 2018</div></div>
+                  <h4>Allgemeine Hochschulreife</h4>
+                  <p>GYMNASIUM SCHLOß HOLTE - STUKENBROCK</p>
                 </div>
               </div>
             </div>
@@ -313,21 +242,24 @@
 
           <section class="section contact-me" data-section="contact" id="contact">
             <div class="container">
-              <div class="section-heading">
-                <h2>Kontakt</h2>
-                <div class="line-dec"></div>
-                <span>
-                  Ich freue mich jederzeit auf Ihre Anfrage.
-                </span>
-                <br /> <br />
-                <p>Erreichen können Sie mich per Mail an</p>
-                <div class="link-button">
-                  <a href="javascript:linkTo_UnCryptMailto('nbjmup;epnjojlAipfis/ofu');">dominik [at] hoehr.net</a>
-                </div>  
-                <br /> <br />
-                <div class="link-button">
-                  <a href="./links">Weitere Links</a>   
-                </div> 
+              <div class="row">
+                <div class="col heading">
+                  <h2>Kontakt</h2>
+                  <div class="line-dec"></div>
+                  <p>Ich freue mich jederzeit auf Ihre Anfrage.</p>
+                </div>
+              </div>
+              <div class="row justify-content-center align-self-center text-center">
+                <div class="col">
+                  <p>Erreichen können Sie mich per Mail</p>
+                  <div class="link-button">
+                    <a href="javascript:linkTo_UnCryptMailto('nbjmup;epnjojlAipfis/ofu');">dominik [at] hoehr.net</a>
+                  </div>  
+                  <br /> <br />
+                  <div class="link-button">
+                    <a href="./links">Weitere Links</a>   
+                  </div> 
+                </div>
               </div>
             </div>
           </section>
