--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <body>
     <div class="page-wrapper container">
       <div class="row justify-content-center align-self-center">
-        <div class="menu col-sm-3"><!-- ToDo: Responsive-->
+        <div class="menu col-sm-3">
           <div class="menu-content">
             <div class="row justify-content-center align-self-center image-round">
               <a href=""><img src="./DHR_squared.png" alt="" /></a>
@@ -111,7 +111,7 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col">
+                <div class="col-md-6">
                   <figure class="skill">
                     <div class="heading">
                       <h4>Softwareentwicklung</h4>
@@ -144,7 +144,7 @@
                     </figcaption>
                   </figure>
                 </div>
-                <div class="col">
+                <div class="col-md-6">
                   <figure class="skill">
                     <div class="heading" >
                       <h4>Fachliche Beratung</h4>
