--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
                     <div class="col">
                       <hr style="background-color: white;" />
                       <p>Schauen Sie gerne auch auf meinen anderen Online-Profilen vorbei und verschaffen Sie sich einen detaillierten Überblick über mich, meinen bisherigen Werdegang und meine Leistungen.</p>
-                      <div class="moreContact">
-                        <div class="link-button mt-3">
+                      <div class="moreContact mt-3">
+                        <div class="link-button">
                           <a href="https://de.linkedin.com/in/dominik-h%C3%B6hr"><i class="fab fa-linkedin"></i> LinkedIn</a>
                         </div> 
                         &nbsp;&nbsp;&nbsp;
