--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </div>
           </section>
 
-          <section class="section skills mt-5" data-section="skills" id="skills"> <!-- ToDo: Responsive-->
+          <section class="section skills mt-5" data-section="skills" id="skills">
             <div class="container">
               <div class="row">
                 <div class="col heading">
@@ -189,7 +189,7 @@
                   <p>Ich suche ständig die Gelegenheit die erlernten Inhalte meines Studiums anzuwenden, zu erweitern und Erfahrungen in der Praxis zu sammeln.</p>
                 </div>
               </div>
-              <div class="row career"><!-- ToDo: Responsive-->
+              <div class="row career">
                 <div class="cv-item">
                   <div class="cv-head"><div class="service-icon"><i class="fa fa-cogs fa-3x"></i></div><div class="service-date">Seit Oktober 2021</div></div>
                   <h4>Gewähltes Mitglied <br /><small>in verschiedenen Kommissionen und Ausschüssen</small></h4>
@@ -197,15 +197,15 @@
                   <i>Stellvertretender Vorsitz im Haushaltsausschuss <br />Beratendesmitglied im Prüfungsausschuss</i>
                 </div>
                 <div class="cv-item">
-                  <div class="cv-head"><div class="service-icon"><i class="fa fa-cogs fa-3x"></i></div><div class="service-date">Seit Oktober 2019</div></div>
-                  <h4>Aktives Mitglied</h4>
-                  <p><a href="https://www.fsrwinfo.de" id="service-place">FACHSCHAFTSRAT WIRTSCHAFTSINFORMATIK <i class="fas fa-link"></i></a></p>
-                </div>
-                <div class="cv-item">
                   <div class="cv-head"><div class="service-icon" ><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Seit August 2020</div></div>
                   <h4>Werkstudent</h4>
                   <p><a href="https://www.beckmann-partner.de" id="service-place">BECKMANN & PARTNER CONSULT <i class="fas fa-link"></i></a></p>
                   <i>Konzeptionierung und Realisierung verschiedener interner Projekte</i>
+                </div>
+                <div class="cv-item">
+                  <div class="cv-head"><div class="service-icon"><i class="fa fa-cogs fa-3x"></i></div><div class="service-date">Seit Oktober 2019</div></div>
+                  <h4>Aktives Mitglied</h4>
+                  <p><a href="https://www.fsrwinfo.de" id="service-place">FACHSCHAFTSRAT WIRTSCHAFTSINFORMATIK <i class="fas fa-link"></i></a></p>
                 </div>
                 <div class="cv-item">
                   <div class="cv-head"><div class="service-icon"><i class="fas fa-graduation-cap fa-3x"></i></div><div class="service-date">Seit Oktober 2018</div></div>
