added some skill fa-icons and added DevOps as interest

--- a/index.html
+++ b/index.html
@@ -77,8 +77,12 @@
                 <div class="col-md-6 d-flex align-content-between flex-wrap">
                   <div class="row">
                     <div class="col">
-                      <p>Interessiert bin ich an der Programmierung und die damit zusammenhängenden Prozesse in den Unternehmen und der Wirtschaft. <br /> <br />
-                      Aktuell studiere ich im 6.Semester und arbeite als Werkstudent in der Consulting-Branche.</p>
+                      <p>
+                        Interessiert bin ich an der Programmierung und die damit zusammenhängenden Prozesse in den Unternehmen und der Wirtschaft. <br /> 
+                        Insbesondere interessiere ich mich für das DevOps-Engineering.<br /> 
+                        <br />
+                        Aktuell studiere ich im 7.Semester und arbeite als Werkstudent in der IT-Consulting-Branche.
+                      </p>
                     </div>
                   </div>
                   <div class="row">
@@ -107,7 +111,7 @@
                 <div class="col heading">
                   <h2>Fertigkeiten & Fähigkeiten</h2>
                   <div class="line-dec"></div>
-                  <p>Ich bin zur Zeit als Fullstack Webentwickler unterwegs. <br /> Dies kann, muss jedoch nicht immer so bleiben.</p>
+                  <p>Ich bin zur Zeit als Full Stack Webentwickler unterwegs. <br /> Dies kann, muss jedoch nicht immer so bleiben.</p>
                 </div>
               </div>
               <div class="row">
@@ -134,11 +138,13 @@
                       <h5>Entwicklungs- und Buildprozess</h5>
                       <div class="skill-list">
                         <span title="git"><i class="fab fa-git"></i></span>
+                        <span title="docker / docker compose"><i class="fab fa-docker"></i></span>
                         <span title="yarn"><i class="fab fa-yarn"></i></span>
                         <span title="Nginx"><i class="fas fa-server"></i></span>
                       </div>
                       <h5>Weitere</h5>
                       <div class="skill-list">
+                        <span title="cli (shell und bash)"><i class="fa fa-terminal"></i></span>
                         <span title="Microsoft Office 365"><i class="fab fa-microsoft"></i></span>
                       </div><small>Insbesondere Sharepoint und Teams</small>
                     </figcaption>
@@ -194,13 +200,13 @@
                   <div class="cv-head"><div class="service-icon"><i class="fa fa-cogs fa-3x"></i></div><div class="service-date">Seit Oktober 2021</div></div>
                   <h4>Gewähltes Mitglied <br /><small>in verschiedenen Kommissionen und Ausschüssen</small></h4>
                   <p><a href="https://stupa.upb.de" id="service-place">STUDIERENDENPARLAMENT <i class="fas fa-link"></i></a></p>
-                  <i>Stellvertretender Vorsitz im Haushaltsausschuss <br />Beratendesmitglied im Prüfungsausschuss</i>
+                  <i>Stellvertretender Vorsitz im Haushaltsausschuss; <br />Beratendesmitglied im Prüfungsausschuss</i>
                 </div>
                 <div class="cv-item">
                   <div class="cv-head"><div class="service-icon" ><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Seit August 2020</div></div>
                   <h4>Werkstudent</h4>
                   <p><a href="https://www.beckmann-partner.de" id="service-place">BECKMANN & PARTNER CONSULT <i class="fas fa-link"></i></a></p>
-                  <i>Konzeptionierung und Realisierung verschiedener interner Projekte</i>
+                  <i>Konzeptionierung und Realisierung verschiedener interner Projekte. <br /> Full-Stack-Entwickler / DevOps-Engineer für RESTful Webservices und deren Architektur.</i>
                 </div>
                 <div class="cv-item">
                   <div class="cv-head"><div class="service-icon"><i class="fa fa-cogs fa-3x"></i></div><div class="service-date">Seit Oktober 2019</div></div>
