--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         Interessiert bin ich an der Programmierung und die damit zusammenhängenden Prozesse in den Unternehmen und der Wirtschaft. <br /> 
                         Insbesondere interessiere ich mich für das DevOps-Engineering.<br /> 
                         <br />
-                        Aktuell studiere ich im 7.Semester und arbeite als Werkstudent in der IT-Consulting-Branche.
+                        Aktuell studiere ich im 1.Masterstudium und arbeite als Werkstudent in der IT-Consulting-Branche.
                       </p>
                     </div>
                   </div>
@@ -197,10 +197,16 @@
               </div>
               <div class="row career">
                 <div class="cv-item">
+                  <div class="cv-head"><div class="service-icon"><i class="fas fa-graduation-cap fa-3x"></i></div><div class="service-date">Seit April 2022</div></div>
+                  <h4>Studium</h4>
+                  <p><a href="https://www.uni-paderborn.de" id="service-place">UNIVERISITÄT PADERBORN <i class="fas fa-link"></i></a></p>
+                  <i>Wirtschaftsinformatik, Master of Science </i>
+                </div>
+                <div class="cv-item">
                   <div class="cv-head"><div class="service-icon"><i class="fa fa-cogs fa-3x"></i></div><div class="service-date">Seit Oktober 2021</div></div>
                   <h4>Gewähltes Mitglied <br /><small>in verschiedenen Kommissionen und Ausschüssen</small></h4>
-                  <p><a href="https://stupa.upb.de" id="service-place">STUDIERENDENPARLAMENT <i class="fas fa-link"></i></a></p>
-                  <i>Stellvertretender Vorsitz im Haushaltsausschuss; <br />Beratendesmitglied im Prüfungsausschuss</i>
+                  <p><a href="https://stupa.upb.de" id="service-place">GREMIENARBEIT <i class="fas fa-link"></i></a></p>
+                  <i>Stellvertretender Vorsitz im Haushaltsausschuss des Studierendenparlaments; <br />Beratendesmitglied im Prüfungsausschuss</i>
                 </div>
                 <div class="cv-item">
                   <div class="cv-head"><div class="service-icon" ><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Seit August 2020</div></div>
@@ -214,7 +220,7 @@
                   <p><a href="https://www.fsrwinfo.de" id="service-place">FACHSCHAFTSRAT WIRTSCHAFTSINFORMATIK <i class="fas fa-link"></i></a></p>
                 </div>
                 <div class="cv-item">
-                  <div class="cv-head"><div class="service-icon"><i class="fas fa-graduation-cap fa-3x"></i></div><div class="service-date">Seit Oktober 2018</div></div>
+                  <div class="cv-head"><div class="service-icon"><i class="fas fa-graduation-cap fa-3x"></i></div><div class="service-date">Oktober 2018 bis April 2022</div></div>
                   <h4>Studium</h4>
                   <p><a href="https://www.uni-paderborn.de" id="service-place">UNIVERISITÄT PADERBORN <i class="fas fa-link"></i></a></p>
                   <i>Wirtschaftsinformatik, Bachelor of Science </i>
