--- a/index.html
+++ b/index.html
@@ -192,58 +192,76 @@
                   <div class="line-dec"></div>
                   <span>Aktuell Student und Werkstudent</span>
                   <br /> <br />
-                  <p>Ich suche ständig die Gelegenheit die erlernten Inhalte meines Studiums anzuwenden, zu erweitern und Erfahrungen in der Praxis zu sammeln.</p>
+                  <p>Ich suche stetig die Gelegenheit die erlernten Inhalte meines Studiums anzuwenden, zu erweitern und Erfahrungen in der Praxis zu sammeln.</p>
                 </div>
               </div>
               <div class="row career">
                 <div class="cv-item">
+                  <div class="cv-head volunteer"><div class="service-icon"><i class="fa fa-cogs fa-3x"></i></div><div class="service-date">seit Oktober 2022</div></div>
+                  <h4>Gewähltes Mitglied <br /><small>in verschiedenen Gremien</small></h4>
+                  <p></p>
+                  <i>Fakultät Wirtschaftswissenschaften; <br/><div class="spacer"></div>Fachschaftsvertretung der Fakultät Wirtschaftswissenschaften</i>
+                  <!-- <i>Kommission für Angelegenheiten des IMT; <br/>Prüfungsausschuss</i> -->
+                </div>
+                <div class="cv-item volunteer">
+                  <div class="cv-head"><div class="service-icon"><i class="fa fa-cogs fa-3x"></i></div><div class="service-date">Seit Oktober 2022</div></div>
+                  <h4>Gewähltes Mitglied</h4>
+                  <p><a href="https://www.fsrwinfo.de" id="service-place">FACHSCHAFTSRAT WIRTSCHAFTSINFORMATIK <i class="fas fa-link"></i></a></p>
+                </div>
+                <div class="cv-item graduation">
                   <div class="cv-head"><div class="service-icon"><i class="fas fa-graduation-cap fa-3x"></i></div><div class="service-date">Seit April 2022</div></div>
                   <h4>Studium</h4>
                   <p><a href="https://www.uni-paderborn.de" id="service-place">UNIVERISITÄT PADERBORN <i class="fas fa-link"></i></a></p>
                   <i>Wirtschaftsinformatik, Master of Science </i>
                 </div>
-                <div class="cv-item">
-                  <div class="cv-head"><div class="service-icon"><i class="fa fa-cogs fa-3x"></i></div><div class="service-date">Seit Oktober 2021</div></div>
-                  <h4>Gewähltes Mitglied <br /><small>in verschiedenen Kommissionen und Ausschüssen</small></h4>
-                  <p><a href="https://stupa.upb.de" id="service-place">GREMIENARBEIT <i class="fas fa-link"></i></a></p>
-                  <i>Stellvertretender Vorsitz im Haushaltsausschuss des Studierendenparlaments; <br />Beratendesmitglied im Prüfungsausschuss</i>
+                <div class="cv-item work">
+                  <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Seit Januar 2022</div></div>
+                  <h4>Ressortleitung Events</h4>
+                  <p><a href="https://www.lookin-messe.de" id="service-place">LOOK IN! GbR <i class="fas fa-link"></i></a></p>
+                  <i>Eventorganisation rund um die Firmenkontaktmesse</i>
                 </div>
-                <div class="cv-item">
+                <div class="cv-item volunteer">
+                  <div class="cv-head"><div class="service-icon"><i class="fa fa-cogs fa-3x"></i></div><div class="service-date">Oktober 2021 bis Oktober 2022</div></div>
+                  <h4>Gewähltes Mitglied <br /><small>in verschiedenen Kommissionen und Ausschüssen</small></h4>
+                  <p></p>
+                  <i>Kommission für Angelegenheiten des IMT; <br/><div class="spacer"></div>Haushaltsausschuss des Studierendenparlaments (Stellv. Vorsitz); <br/><div class="spacer"></div>Prüfungsausschuss Wirtschaftsinformatik</i>
+                </div>
+                <div class="cv-item work">
                   <div class="cv-head"><div class="service-icon" ><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Seit August 2020</div></div>
                   <h4>Werkstudent</h4>
                   <p><a href="https://www.beckmann-partner.de" id="service-place">BECKMANN & PARTNER CONSULT <i class="fas fa-link"></i></a></p>
                   <i>Konzeptionierung und Realisierung verschiedener interner Projekte. <br /> Full-Stack-Entwickler / DevOps-Engineer für RESTful Webservices und deren Architektur.</i>
                 </div>
-                <div class="cv-item">
+                <div class="cv-item volunteer">
                   <div class="cv-head"><div class="service-icon"><i class="fa fa-cogs fa-3x"></i></div><div class="service-date">Seit Oktober 2019</div></div>
                   <h4>Aktives Mitglied</h4>
                   <p><a href="https://www.fsrwinfo.de" id="service-place">FACHSCHAFTSRAT WIRTSCHAFTSINFORMATIK <i class="fas fa-link"></i></a></p>
                 </div>
-                <div class="cv-item">
+                <div class="cv-item graduation">
                   <div class="cv-head"><div class="service-icon"><i class="fas fa-graduation-cap fa-3x"></i></div><div class="service-date">Oktober 2018 bis April 2022</div></div>
                   <h4>Studium</h4>
                   <p><a href="https://www.uni-paderborn.de" id="service-place">UNIVERISITÄT PADERBORN <i class="fas fa-link"></i></a></p>
                   <i>Wirtschaftsinformatik, Bachelor of Science </i>
                 </div>
-                <div class="cv-item">
-                  <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">April 2018 bis April 2019</div></div>
+                <div class="cv-item work">
+                  <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">April 2018 bis<br/> April 2019</div></div>
                   <h4>Aushilfe</h4>
                   <p>COMBI VERBRAUCHERMARKT</p>
                   <i>Verkäufer auf der Ladenfläche</i>
                 </div>
-                <div class="cv-item">
+                <div class="cv-item volunteer">
                   <div class="cv-head"><div class="service-icon"><i class="fa fa-cogs fa-3x"></i></div><div class="service-date"></div></div>
                   <h4>Teilnahme</h4>
                   <p><a href="https://www.pyddf.de" id="service-place">PYTHON SPRINT, DÜSSELDORF (PyDDF) <i class="fas fa-link"></i></a></p>
                   <i>und weitere Meetings</i>
                 </div>
-                <div class="cv-item">
+                <div class="cv-item volunteer">
                   <div class="cv-head"><div class="service-icon"><i class="fa fa-cogs fa-3x"></i></div><div class="service-date">2012 bis 2018</div></div>
                   <h4>Tonmeister Assistent</h4>
                   <p>GYMNASIUM SCHLOß HOLTE - STUKENBROCK</p>
                   <i>Betreuung der Ton- und Lichttechnik bei diversen Schulveranstaltungen</i>
                 </div>
-                <div class="cv-item">
+                <div class="cv-item graduation">
                   <div class="cv-head"><div class="service-icon"><i class="fas fa-graduation-cap fa-3x"></i></div><div class="service-date">2010 bis 2018</div></div>
                   <h4>Allgemeine Hochschulreife</h4>
                   <p>GYMNASIUM SCHLOß HOLTE - STUKENBROCK</p>
