--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                   <div class="cv-head volunteer"><div class="service-icon"><i class="fa fa-cogs fa-3x"></i></div><div class="service-date">seit Oktober 2022</div></div>
                   <h4>Gewähltes Mitglied <br /><small>in verschiedenen Gremien</small></h4>
                   <p></p>
-                  <i>Fakultät Wirtschaftswissenschaften; <br/><div class="spacer"></div>Fachschaftsvertretung der Fakultät Wirtschaftswissenschaften</i>
+                  <i>Fakultätsrat Fakultät Wirtschaftswissenschaften; <br/><div class="spacer"></div>Fachschaftsvertretung der Fakultät Wirtschaftswissenschaften</i>
                   <!-- <i>Kommission für Angelegenheiten des IMT; <br/>Prüfungsausschuss</i> -->
                 </div>
                 <div class="cv-item volunteer">
